Fixed bug where overflow-y was cutting of the leftmost elements in a flex container

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ main {
 ul {
   display: flex;
   gap: 1rem;
-  justify-content: center;
+  justify-content: safe center;
   max-width: 80%;
   min-height: 50px;
   padding: 0;
